Various re-arrangements of the utility boxes and buttons.

--- a/inst/DUE.css
+++ b/inst/DUE.css
@@ -1,1 +1,2 @@
-.RTobj {border-color: #D00; color: #D00;}
+.RTobj {border-color: #D00; color: #D00; }
+.rTobj {border-color: #00D; color: #00D; border-width: 2;}
