--- a/inst/DUE.css
+++ b/inst/DUE.css
@@ -1,2 +1,4 @@
 .RTobj {border-color: #D00; color: #D00;}
 .rTobj {border-color: #00D; color: #00D; border-width: 2;}
+.primped {border-width: 5px; font-style: italic; font-weight: bold;}
+.unprimped {border-width: 1; }
