Thicker primping boxes, colored white for better visibility.

--- a/inst/DUEshiny/DUE.css
+++ b/inst/DUEshiny/DUE.css
@@ -1,3 +1,3 @@
 .RTobj {border-color: #D00; color: #D00;}
 .rTobj {border-color: #00D; color: #00D; border-width: 2;}
-.primped {border-width: 5px; font-style: italic; font-weight: bold;}
+.primped {border-width: 10px; border-color: #FFF; font-style: italic; font-weight: bold;}
